--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ numpy
 pandas
 pydeck
 streamlit
+pysqlite3-binary
 dashscope             ==                   1.13.6
 chromadb              ==                   0.4.22
 langchain             ==                   0.0.354
